# f3-gfx

./: Cargo.toml
examples/: load_resources.rs  load_tex.rs  use_dymmy_back.rs  vulkano_back.rs
examples/common/: dummy_back.rs  dymmy_back.rs  id_counter.rs  mod.rs  task_recv.rs
examples/common/vulkano_back/: cpu_buf.rs  geom_buf.rs  gpu.rs  mod.rs  presenter.rs  renderer.rs  vert_buf.rs
src/: async_tasker.rs  back.rs  data_src.rs  deferred_task.rs  generic_gfx.rs  geom.rs  gfx.rs  handler.rs  job.rs  job_stor.rs  lib.rs  link.rs  present.rs  read_tex.rs  render.rs  res.rs  running.rs  scene.rs  settings.rs  task.rs  task_channel.rs  task_counter.rs  task_recv.rs  tex.rs  tex_waiter.rs  waiter.rs
src/back/: mod.rs  present.rs
src/back/resource/: geom.rs  mesh.rs  mod.rs  window.rs
src/back/resource/task/: add.rs  list.rs  mod.rs  read.rs  remove.rs
src/read/: mod.rs  read_geom.rs  read_tex.rs
src/res/: mod.rs  set_get.rs
src/task/: load_geom.rs  load_tex.rs  mod.rs  remove_geom.rs  remove_tex.rs  render.rs
