[package]
name = "f3_gfx"
version = "0.0.1"
authors = ["f3kilo <f3kilo@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_warn"] }
thiserror = "1.0.24"


[dev-dependencies]
sloggers = "1.0.1"
futures = "0.3.13"