[package]
name = "f3_gfx"
version = "0.0.1"
authors = ["f3kilo <f3kilo@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = "2.7.0"
thiserror = "1.0.24"
raw-window-handle = "0.3.3"

[dev-dependencies]
sloggers = "1.0.1"
futures = "0.3.13"
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }
winit = "0.24.0"